syntax = "proto3";
package pb;
option go_package = "internal/metadata/pb";

message File {
    string filename = 1;
    string content_type = 2;
    bytes content = 3;
}



